<resources>
    <string name="app_name">Shoe Store</string>
    <string name="sign_in_button">Sign in</string>
    <string name="create_shoe_button">Create</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="welcome_title_onboarding">Welcome, %s </string>
    <string name="welcome_description_onboarding">Use shoe store app to find and see it easily. </string>
    <string name="login_empty_passwword">Password must be not empty</string>
    <string name="login_empty_username">Username must be not empty</string>
    <string name="start_onboarding">Start</string>
    <string name="onboarding_continue">Continue</string>
    <string name="button_logout">Log-out</string>
    <string name="skip">skip</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="shoe_store_list">Shoe store list</string>
    <string name="no_items">Ups. We don\'t have any shoes yet.</string>
    <string name="create">Create</string>
    <string name="details">Details</string>
    <string name="paste_uri_of_default_image">Paste uri of default image</string>
    <string name="size">Size</string>
    <string name="size_format">"Size %s"</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
    <string name="button_log_in">Log-in</string>
    <string name="onboarding_tittle">Instructions</string>
    <string name="welcome_tittle">Welcome</string>
    <string name="welcome_description">:) Don\'t give up. You can continue!</string>
    <string name="you_need_to_be_log_in">You need to be log-in</string>
    <string name="detail_shoe">Detail shoe</string>
    <string name="slide_create_tittle">Create</string>
    <string name="slide_details_tittle">Details</string>
    <string name="slide_list_shoes_tittle">List of shoes</string>
    <string name="slide_start_tittle">Let\'s go!</string>
    <string name="slide_start_description">Here we go</string>
    <string name="slide_list_shoes_description">You can browse faster on it</string>
    <string name="slide_details_description">We can see details of each one</string>
    <string name="slide_create_description">Create shoes easily, on simple steps</string>
</resources>