<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.login.LoginFragment"
        android:label="@string/button_log_in"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.udacity.shoestore.ui.list.ListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_homeFragment_to_createShoeFragment"
            app:destination="@id/createShoeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.udacity.shoestore.ui.onboarding.OnboardingFragment"
        android:label="@string/onboarding_tittle" >
        <action
            android:id="@+id/action_onboardingFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.welcome.WelcomeFragment"
        android:label="@string/welcome_tittle" >
        <action
            android:id="@+id/action_welcomeFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:popUpTo="@id/welcomeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.udacity.shoestore.ui.detail.DetailFragment"
        android:label="@string/app_name" >
        <argument
            android:name="Shoe"
            app:argType="com.udacity.shoestore.models.Shoe" />
    </fragment>
    <fragment
        android:id="@+id/createShoeFragment"
        android:name="com.udacity.shoestore.ui.create.CreateShoeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_create_shoe" />
</navigation>