<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scene_signin_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:animateLayoutChanges="true"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:padding="@dimen/spacing_24">

            <ImageView
                android:id="@+id/signup_login_image_logo"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:transitionName="logo"
                app:layout_constraintBottom_toTopOf="@id/signin_username_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signin_username_container"
                style="@style/Widget.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/signin_username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ-_.+@"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:hint="Username / Email"
                    android:maxLength="60"
                    android:maxLines="1"
                    android:paddingBottom="16dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signin_password_container"
                style="@style/Widget.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/sign_in_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signin_username_container"
                app:layout_constraintVertical_bias="0.0">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/signin_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:hint="Password"
                    android:maxLength="60"
                    android:maxLines="1"
                    android:paddingBottom="16dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/toggle_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/hide"
                android:textOn="@string/show"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/signin_password_container"
                app:layout_constraintEnd_toEndOf="@+id/signin_password_container"
                app:layout_constraintTop_toTopOf="@+id/signin_password_container" />

            <TextView
                android:id="@+id/sign_in_error"
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_48"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginBottom="@dimen/spacing_16"
                android:drawablePadding="@dimen/spacing_8"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/spacing_16"
                android:paddingRight="@dimen/spacing_16"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signin_password_container"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/sign_in_button"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>